force-app/main/default/objects/IME_SC_CA_Contact_role__c/IME_SC_CA_Contact_role__c.object-meta.xml
<CustomObject>
    <description>Junction object</description>
    <label>CA-Contact-role</label>
    <nameField>
        <displayFormat>CA-{0000000000}</displayFormat>
        <label>CA-Contact-role  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CA-Contact-roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>