force-app/main/default/objects/IME_SC_CA_Contact_role__c/fields/IME_SC_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>IME_SC_Contact_Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Disaster Recovery /Serious Operational Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>