force-app/main/default/objects/IME_SC_CA_Contact_role__c/fields/IME_SC_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>IME_SC_Customer_Account__c</fullName>
    <label>Customer Account</label>
    <referenceTo>IM_Customer_Account__c</referenceTo>
    <relationshipName>CA_Contact_roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>