force-app/main/default/objects/IME_SC_CA_Contact_role__c/fields/IME_SC_Mastered_in_SF__c.field-meta.xml
<CustomField>
    <fullName>IME_SC_Mastered_in_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mastered in SF</label>
    <type>Checkbox</type>
</CustomField>