force-app/main/default/objects/IME_SC_CA_Contact_role__c/fields/IME_SC_Role_Status__c.field-meta.xml
<CustomField>
    <fullName>IME_SC_Role_Status__c</fullName>
    <label>Role Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>